# sample

./: .gitignore  CMakeLists.txt
cmake/: .FindSDL.cmake.swp  FindSDL.cmake
doc/: Readme.txt
include/framework/: Component.h  Type.h  framework.h
src/editor/: CMakeLists.txt  editor.cpp
src/framework/: CMakeLists.txt  Component.cpp  Type.cpp
src/reader/: CMakeLists.txt  reader.cpp
src/reader/lua/: CMakeLists.txt  lauxlib.c
